--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -249,36 +249,83 @@
         <!--Detail View Controller-->
         <scene sceneID="saW-uR-npe">
             <objects>
-                <viewController id="0cK-9v-dxM" customClass="DetailViewController" customModule="ScolioKids" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0cK-9v-dxM" customClass="DetailViewController" customModule="ScolioKids" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="abP-Ht-rF8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Instruções" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x4b-GR-pHc">
-                                <rect key="frame" x="20" y="98" width="113" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aMa-Wy-TW6">
+                                <rect key="frame" x="0.0" y="118" width="414" height="778"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="newcell" rowHeight="337" id="Qhg-G7-a2J" customClass="CustomNewCell" customModule="ScolioKids" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="337"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qhg-G7-a2J" id="KLx-7K-eKl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="337"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lov-l4-ktO">
+                                                    <rect key="frame" x="20" y="11" width="374" height="326"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="050-og-gbR">
+                                                            <rect key="frame" x="67" y="8" width="240" height="179.5"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9b-9x-PIl">
+                                                            <rect key="frame" x="27" y="206" width="320" height="72"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="72" id="DFe-lG-JVG"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="D9b-9x-PIl" firstAttribute="leading" secondItem="lov-l4-ktO" secondAttribute="leading" constant="27" id="GRO-kM-gcm"/>
+                                                        <constraint firstItem="050-og-gbR" firstAttribute="top" secondItem="lov-l4-ktO" secondAttribute="topMargin" id="gHX-oV-sbc"/>
+                                                        <constraint firstItem="050-og-gbR" firstAttribute="leading" secondItem="lov-l4-ktO" secondAttribute="leading" constant="67" id="ixv-DN-r3g"/>
+                                                        <constraint firstItem="D9b-9x-PIl" firstAttribute="centerX" secondItem="lov-l4-ktO" secondAttribute="centerX" id="jlD-BM-sF1"/>
+                                                        <constraint firstAttribute="bottom" secondItem="D9b-9x-PIl" secondAttribute="bottom" constant="48" id="lpP-Gf-ebV"/>
+                                                        <constraint firstItem="D9b-9x-PIl" firstAttribute="centerX" secondItem="050-og-gbR" secondAttribute="centerX" id="tzR-0N-Ogw"/>
+                                                        <constraint firstItem="D9b-9x-PIl" firstAttribute="top" secondItem="050-og-gbR" secondAttribute="bottom" constant="18.5" id="x5O-NJ-KO8"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="lov-l4-ktO" secondAttribute="bottom" id="8gz-Uz-lEK"/>
+                                                <constraint firstItem="lov-l4-ktO" firstAttribute="top" secondItem="KLx-7K-eKl" secondAttribute="topMargin" id="azs-Ih-YSZ"/>
+                                                <constraint firstItem="lov-l4-ktO" firstAttribute="leading" secondItem="KLx-7K-eKl" secondAttribute="leadingMargin" id="djS-9E-BXT"/>
+                                                <constraint firstItem="lov-l4-ktO" firstAttribute="trailing" secondItem="KLx-7K-eKl" secondAttribute="trailingMargin" id="ofd-7P-hW2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageCell" destination="050-og-gbR" id="iiR-1d-e84"/>
+                                            <outlet property="textCell" destination="D9b-9x-PIl" id="Udu-u3-PAC"/>
+                                            <outlet property="viewCell" destination="KLx-7K-eKl" id="Tvk-QO-es2"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instruções" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x4b-GR-pHc">
+                                <rect key="frame" x="20" y="88" width="113" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aMa-Wy-TW6">
-                                <rect key="frame" x="20" y="173" width="394" height="723"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Qhg-G7-a2J">
-                                        <rect key="frame" x="0.0" y="44.5" width="394" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qhg-G7-a2J" id="KLx-7K-eKl">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="L6D-lS-i55"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aMa-Wy-TW6" firstAttribute="top" secondItem="x4b-GR-pHc" secondAttribute="bottom" id="5yh-eW-fZY"/>
+                            <constraint firstItem="aMa-Wy-TW6" firstAttribute="trailing" secondItem="L6D-lS-i55" secondAttribute="trailing" id="Ozb-vR-vHz"/>
+                            <constraint firstItem="L6D-lS-i55" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="x4b-GR-pHc" secondAttribute="trailing" symbolic="YES" id="UUc-IH-czm"/>
+                            <constraint firstItem="aMa-Wy-TW6" firstAttribute="leading" secondItem="L6D-lS-i55" secondAttribute="leading" id="bqg-XU-G4E"/>
+                            <constraint firstItem="x4b-GR-pHc" firstAttribute="leading" secondItem="abP-Ht-rF8" secondAttribute="leadingMargin" id="eHb-bB-dIi"/>
+                            <constraint firstAttribute="bottom" secondItem="aMa-Wy-TW6" secondAttribute="bottom" id="qZe-5a-whJ"/>
+                            <constraint firstItem="x4b-GR-pHc" firstAttribute="top" secondItem="L6D-lS-i55" secondAttribute="top" constant="44" id="tnd-Ff-7f9"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="InstructionView" destination="aMa-Wy-TW6" id="ado-2E-dyZ"/>
